--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,79 @@
-Hello, world
+
+		<section class="screen--main">
+			<h1>Eat with Me</h1>
+			
+			<p>Welcome, [[JACKIE]]</p>
+        	
+			<button class="button">Start!</button>
+			
+		</section>
+		
+		<section class="screen--character">
+			<h2>Choose Character</h2>
+        	
+			<div class="row">
+				<div class="small-6 columns character--bear">
+					<img src="http://placekitten.com/g/300/300">
+					<p>bear</p>
+				</div>
+				<div class="small-6 columns character--rabbit">
+					<img src="http://placekitten.com/g/300/300">
+					<p>rabbit</p>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="small-6 columns character--cat">
+					<img src="http://placekitten.com/g/300/300">
+					<p>cat</p>
+				</div>
+				<div class="small-6 columns character--dog">
+					<img src="http://placekitten.com/g/300/300">
+					<p>dog</p>
+				</div>
+			</div>
+			
+		</section>
+		
+		<section class="screen--feed">
+			<div class="row header">
+				<div class="small-4 columns">
+					coins
+				</div>
+				<div class="small-8 columns">
+					
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-12 columns">
+					health
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-12 columns">
+					<img src="http://placekitten.com/g/400/400">
+					<h2>Bear</h2>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="small-12 columns">
+					TODAY
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="small-12 columns">
+					Broccoli
+				</div>
+			</div>
+		</section>
+		
+		<section class="screen--status">
+			<div class="row">
+				<div class="small-12 columns">
+					YOU JUST ATE PIZZA
+				</div>
+			</div>
+		</section>
+			
