--- a/app/assets/stylesheets/css/prototype.css
+++ b/app/assets/stylesheets/css/prototype.css
@@ -15,3 +15,7 @@ section[class*='screen'] {
 .screen--feed .header {
   background: black;
   padding: 1em; }
+
+.icon--character {
+  width: 75%;
+  margin: 0 auto; }
