--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,12 @@
 
 		<section class="screen--main">
 			<h1>Eat with Me</h1>
-			
+			<div class="row">
+				<div class="small-12 columns">
+					<img src="http://placekitten.com/g/400/400" class="icon--character">
+					<h2>Bear</h2>
+				</div>
+			</div>
 			<p>Welcome, [[JACKIE]]</p>
         	
 			<button class="button">Start!</button>
@@ -46,12 +51,12 @@
 			</div>
 			<div class="row">
 				<div class="small-12 columns">
-					health
+					[[health bar]]
 				</div>
 			</div>
 			<div class="row">
 				<div class="small-12 columns">
-					<img src="http://placekitten.com/g/400/400">
+					<img src="http://placekitten.com/g/400/400" class="icon--character">
 					<h2>Bear</h2>
 				</div>
 			</div>
@@ -63,8 +68,36 @@
 			</div>
 			
 			<div class="row">
-				<div class="small-12 columns">
+				<div class="small-2 columns">
+					<img src="http://placekitten.com/g/50/40">
+				</div>
+				<div class="small-2 columns">
 					Broccoli
+				</div>
+				<div class="small-2 columns">
+					o
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-2 columns">
+					<img src="http://placekitten.com/g/50/40">
+				</div>
+				<div class="small-2 columns">
+					Corn
+				</div>
+				<div class="small-2 columns">
+					o
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-2 columns">
+					<img src="http://placekitten.com/g/50/40">
+				</div>
+				<div class="small-2 columns">
+					Pepsi
+				</div>
+				<div class="small-2 columns">
+					o
 				</div>
 			</div>
 		</section>
@@ -73,6 +106,12 @@
 			<div class="row">
 				<div class="small-12 columns">
 					YOU JUST ATE PIZZA
+				</div>
+			</div>
+			<div class="row">
+				<div class="small-12 columns">
+					<img src="http://placekitten.com/g/400/400" class="icon--character">
+					<h2>Bear</h2>
 				</div>
 			</div>
 		</section>
