--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,9 +7,9 @@
 					<h2>Bear</h2>
 				</div>
 			</div>
-			<p>Welcome, [[JACKIE]]</p>
+			<p>Welcome, [[JACKIE]]!</p>
         	
-			<button class="button">Start!</button>
+			<button class="large button round">Start!</button>
 			
 		</section>
 		
@@ -17,33 +17,56 @@
 			<h2>Choose Character</h2>
         	
 			<div class="row">
-				<div class="small-6 columns character--bear">
+				<div class="small-6 columns character bear">
 					<img src="http://placekitten.com/g/300/300">
 					<p>bear</p>
+					
+					<div class="information">
+						<label>Name</label>
+							<input type="text" placeholder="large-12.columns">
+						<button class="button small">Save</button>
+					</div>
 				</div>
-				<div class="small-6 columns character--rabbit">
+				<div class="small-6 columns character rabbit">
 					<img src="http://placekitten.com/g/300/300">
 					<p>rabbit</p>
+					
+					<div class="information">
+						<label>Name</label>
+							<input type="text" placeholder="large-12.columns">
+						<button class="button small">Save</button>
+					</div>
+				</div>
+				<div class="small-6 columns character cat">
+					<img src="http://placekitten.com/g/300/300">
+					<p>cat</p>
+					
+					<div class="information">
+						<label>Name</label>
+							<input type="text" placeholder="large-12.columns">
+						<button class="button small">Save</button>
+					</div>
+				</div>
+				<div class="small-6 columns character dog">
+					<img src="http://placekitten.com/g/300/300">
+					<p>dog</p>
+					
+					<div class="information">
+						<label>Name</label>
+							<input type="text" placeholder="large-12.columns">
+						<button class="button small">Save</button>
+					</div>
 				</div>
 			</div>
 			
-			<div class="row">
-				<div class="small-6 columns character--cat">
-					<img src="http://placekitten.com/g/300/300">
-					<p>cat</p>
-				</div>
-				<div class="small-6 columns character--dog">
-					<img src="http://placekitten.com/g/300/300">
-					<p>dog</p>
-				</div>
-			</div>
+	
 			
 		</section>
 		
 		<section class="screen--feed">
 			<div class="row header">
-				<div class="small-4 columns">
-					coins
+				<div class="small-4 columns coins">
+					$ coins
 				</div>
 				<div class="small-8 columns">
 					
