--- a/app/assets/stylesheets/prototype.scss
+++ b/app/assets/stylesheets/prototype.scss
@@ -1,15 +1,6 @@
-div[class*='character'] {
-	background: green;
-	min-height: 5em;
-	border: .5em solid black;
-	img {
-		border-radius: 40px;
-	}
-	p {
-		text-align: center;
-	}
-}
+
 section[class*='screen'] {
+	text-align: center;
 	height: 450px;
 	background: red;
 	margin-bottom: 100px;
@@ -20,14 +11,34 @@ section[class*='screen'] {
 	
 }
 .screen--character {
-	
-	
+	.character {
+		min-height: 5em;
+		background: blue;
+		border-radius: 30px;
+		p {
+			text-align: center;
+		}
+		&.selected {
+			background: yellow;
+		}
+		
+		.information {
+			background: green;
+			position: absolute;
+			min-height: 5em;
+			margin-top: -11em;
+			z-index: 10;
+		}
+	}
 }
 
 .screen--feed {
 	.header {
-		background: black;
+		background: blue;
 		padding: 1em;
+		.coins {
+			text-align: left;
+		}
 	}
 	
 }
