--- a/app/assets/stylesheets/prototype.scss
+++ b/app/assets/stylesheets/prototype.scss
@@ -1,49 +1,49 @@
-
 section[class*='screen'] {
-	text-align: center;
-	height: 450px;
-	background: red;
-	margin-bottom: 100px;
+  text-align: center;
+  height: 450px;
+  background: red;
+  margin-bottom: 100px;
 }
 
 .screen--main {
-	
-	
+
+
 }
 .screen--character {
-	.character {
-		min-height: 5em;
-		background: blue;
-		border-radius: 30px;
-		p {
-			text-align: center;
-		}
-		&.selected {
-			background: yellow;
-		}
-		
-		.information {
-			background: green;
-			position: absolute;
-			min-height: 5em;
-			margin-top: -11em;
-			z-index: 10;
-		}
-	}
+  .character {
+    min-height: 5em;
+    background: blue;
+    border-radius: 30px;
+    p {
+      text-align: center;
+    }
+    &.selected {
+      background: yellow;
+    }
+
+    .information {
+      display: none;
+      background: green;
+      position: absolute;
+      min-height: 5em;
+      margin-top: -11em;
+      z-index: 10;
+    }
+  }
 }
 
 .screen--feed {
-	.header {
-		background: blue;
-		padding: 1em;
-		.coins {
-			text-align: left;
-		}
-	}
-	
+  .header {
+    background: blue;
+    padding: 1em;
+    .coins {
+      text-align: left;
+    }
+  }
+
 }
 
 .icon--character {
-	width: 75%;
-	margin: 0 auto;
+  width: 75%;
+  margin: 0 auto;
 }
