--- a/app/views/pets/_pet.html.erb
+++ b/app/views/pets/_pet.html.erb
@@ -9,7 +9,8 @@
 
 <div class="row">
   <div class="small-12 columns">
-    <%= pet.health_index %>
+    <%= image_tag pet.health_icon, title: pet.feeds.count %>
+    (<%= pet.health_index %>)
   </div>
 </div>
 
