--- a/app/assets/stylesheets/prototype.scss
+++ b/app/assets/stylesheets/prototype.scss
@@ -1,10 +1,11 @@
 $background: url(/assets/geometry.png);
 $card: url(/assets/knit2.png);
 $highlight: #9ACD6C;
-$infoCard: rgba(247,245,235,.75);
+$transLight: rgba(247,245,235,.75);
 $royal: #361984;
 $light: #B4ACD1;
 $coral: #ED9685;
+$lilaLight: rgba(180, 172, 209, .25);
 
 @mixin background-clip($clip) {
   -webkit-background-clip: $clip;
@@ -17,7 +18,7 @@ body {
 }
 fieldset {
 	border: none;
-	padding: none;
+	padding: none !important;
 }
 section[class*='screen'] {
   text-align: center;
@@ -32,7 +33,7 @@ section[class*='screen'] {
     min-height: 5em;
     background: $card;
     border-radius: 2em;
-  border: .5em double $light;
+    border: .5em double $light;
   @include background-clip(padding-box);
 	
     p {
@@ -46,11 +47,11 @@ section[class*='screen'] {
 
     .information {
       display: none;
-      background: $infoCard;
+      background: $transLight;
+      border-radius: 1.75em;
 	  padding: 1em;
       position: absolute;
       min-height: 5em;
-      margin-top: -20em;
       z-index: 10;
 
 	  li {
@@ -64,12 +65,15 @@ section[class*='screen'] {
 }
 
 .screen--feed {
-  .header {
-    background: blue;
+  .feed-header {
+    background: $transLight;
     padding: 1em;
-    .coins {
-      text-align: left;
+    div:first-child {
+      	text-align: left;
     }
+	div:last-child {
+		text-align: right;
+	}
   }
 
 }
@@ -77,4 +81,12 @@ section[class*='screen'] {
 .icon--character {
   width: 75%;
   margin: 0 auto;
+}
+.foods {
+	padding: 1em;
+	border-bottom: .1em dotted $coral;
+	text-align: left;
+	div:nth-child(4n-2) {
+		text-align: center;
+	}
 }
