--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -9,30 +9,16 @@
     </div>
   </div>
 
-  <% Meal.all.each do |meal| %>
-    <div class="row foods">
+  <div class="row food">
+    <% Meal.all.each do |meal| %>
       <div class="small-2 large-2 columns">
-        <%= image_tag meal.image_url %>
+        <%= image_tag meal.image_url, class: ["draggable"], data: { meal_id: meal.id, pet_id: @pet.id } %>
       </div>
-
-      <div class="small-4 large-6 columns">
-        <h4><%= meal.name.titleize %></h4>
-      </div>
-
-      <div class="small-3 large-2 columns status <%= meal.qualification %>">
-        <%= meal.qualification %>
-		<!--replace a-good b-neutral c-bad with "happy.png", "neutral.png", "sad.png"-->
-      </div>
-
-      <div class="small-3 large-2 columns">
-        <%= form_for Feed.new do |f| %>
-          <%= f.hidden_field :pet_id, value: @pet.id %>
-          <%= f.hidden_field :meal_id, value: meal.id %>
-          <%= f.submit value: "Feed!", class: "button round" %>
-        <% end %>
-      </div>
-
-      <div class="columns"></div>
-    </div>
-  <% end %>
+    <% end %>
+    <div class="columns"></div>
+  </div>
 </section>
+
+<% content_for :dom_ready do %>
+  new FeedMe();
+<% end %>
