remove meals when feeding

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -19,6 +19,11 @@
   </div>
 </section>
 
+<div id="myModal" class="reveal-modal large">
+  <h2>You just ate <span id='food-name'>FOOD_NAME</span></h2>
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+
 <% content_for :dom_ready do %>
   new FeedMe();
 <% end %>
