--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -19,7 +19,7 @@
   </div>
 </section>
 
-<div id="myModal" class="reveal-modal large">
+<div id="myModal" class="reveal-modal large text-center">
   <h2>You just ate <span id='food-name'>FOOD_NAME</span></h2>
   <a class="close-reveal-modal">&#215;</a>
 </div>
