--- a/app/assets/stylesheets/prototype.scss
+++ b/app/assets/stylesheets/prototype.scss
@@ -1,4 +1,4 @@
-$background: url(/assets/geometry.png);
+$background: url(/assets/geometry.png) #f2eedc;
 $card: url(/assets/knit2.png);
 $highlight: #9ACD6C;
 $transLight: rgba(247,245,235,.75);
