--- a/app/views/pets/_pet.html.erb
+++ b/app/views/pets/_pet.html.erb
@@ -7,7 +7,7 @@
     <p>
       <%= pet.name %> feels
       <%= image_tag pet.health_icon, title: pet.feeds.count, id: "health_icon" %>
-      <span>(<span id="health_index"><%= pet.health_index %></span>)</span>
+      (<span id="health_index"><%= pet.health_index %></span>)
     </p>
   </div>
 </div>
