--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -5,13 +5,13 @@
 
   <div class="row">
     <div class="small-12 columns">
-      TODAY
+		Today, we ate...
     </div>
   </div>
 
   <div class="row food">
     <% Meal.all.each do |meal| %>
-      <div class="small-2 large-2 columns">
+      <div class="small-3 large-2 columns">
         <%= image_tag meal.image_url, class: ["draggable"], data: { meal_id: meal.id, pet_id: @pet.id } %>
       </div>
     <% end %>
