added scale into html

--- a/app/views/pets/_pet.html.erb
+++ b/app/views/pets/_pet.html.erb
@@ -9,6 +9,10 @@
       <%= image_tag pet.health_icon, title: pet.feeds.count, id: "health_icon" %>
       (<span id="health_index"><%= pet.health_index %></span>)
     </p>
+	
+	 <%= image_tag "scale/state-1.png"%><br>
+	 <%= image_tag "scale/bar.png"%>
+	 <%= image_tag "scale/tick.png"%>
   </div>
 </div>
 
