--- a/app/views/pets/_pet.html.erb
+++ b/app/views/pets/_pet.html.erb
@@ -19,7 +19,13 @@
 
 <div class="row">
   <div class="small-12 columns">
-    <%= image_tag "#{pet.image_url}.png", class: "droppable" %>
+    <%=
+      image_tag "#{pet.image_url}_close.png", class: "droppable",
+        data: {
+          open: image_path("#{pet.image_url}.png"),
+          closed: image_path("#{pet.image_url}_close.png"),
+        }
+    %>
     <h2><%= pet.name %></h2>
   </div>
 </div>
