--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,7 +1,7 @@
 <section class="screen--character">
   <p>Welcome, <%= @person.name %>!</p>
 
-  <h2>Choose a Friend!</h2>
+  <h2>Take your pet home!</h2>
 
   <div class="row">
     <% Character.all.each do |character| %>
