move scale over

--- a/app/assets/stylesheets/prototype.scss
+++ b/app/assets/stylesheets/prototype.scss
@@ -95,7 +95,7 @@ section[class*='screen'] {
       	text-align: left;
     }
 	div:last-child {
-		text-align: right;
+		text-align: center;
 	}
   }
 
