--- a/app/views/pets/_pet.html.erb
+++ b/app/views/pets/_pet.html.erb
@@ -1,6 +1,6 @@
 <div class="row feed-header">
   <div class="large-2 columns coins">
-    $ <span id="coins"><%= pet.coins %></span>
+    <%= image_tag "money.png" %> <br> <span id="coins"><%= pet.coins %></span>
   </div>
 
   <div class="large-8 columns">
