--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -17,7 +17,7 @@
             <%= f.input :character_id, value: character.id, as: :hidden %>
             <%= f.input :person_id, value: @person.id, as: :hidden %>
             <%= f.actions do %>
-              <%= f.action :submit, label: "Save", button_html: { class: "button"} %>
+              <%= f.action :submit, label: "Save", button_html: { class: "button round"} %>
             <% end %>
           <% end %>
         </div>
