--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -5,7 +5,7 @@
 
   <div class="row">
     <div class="small-12 columns">
-      Today, we ate...
+      <p>Today, we ate...</p>
     </div>
   </div>
 
