--- a/app/assets/stylesheets/prototype.scss
+++ b/app/assets/stylesheets/prototype.scss
@@ -21,6 +21,14 @@ $lilaLight: rgba(180, 172, 209, .25);
 
 body {
 	background: $background;
+	font-family: 'Didact Gothic', sans-serif;
+}
+p {
+	font-size: 1.25em;
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Didact Gothic', sans-serif;
+	font-weight: normal;
 }
 fieldset {
 	border: none;
