--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,29 @@
 <div class="row">
-	<div class="large-12 column">
-		<h2>Sign up</h2>
+  <div class="large-12 column">
+    <h2>Sign up</h2>
 
-		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-		  <%= devise_error_messages! %>
-		
-		  <div><%= f.label :email %><br />
-		  <%= f.email_field :email, :autofocus => true %></div>
-		
-		  <div><%= f.label :password %><br />
-		  <%= f.password_field :password %></div>
-		
-		  <div><%= f.label :password_confirmation %><br />
-		  <%= f.password_field :password_confirmation %></div>
-		
-		  <div><%= f.submit "Sign up", class: "button round" %></div>
-		<% end %>
-		
-		<%= render "devise/shared/links" %>
-	</div>
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+
+      <div><%= f.label :email %><br />
+      <%= f.email_field :email, :autofocus => true %></div>
+
+      <div><%= f.label :password %><br />
+      <%= f.password_field :password %></div>
+
+      <div><%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation %></div>
+
+      <%= fields_for :people do |p| %>
+        <div>
+          <%= p.label :name %><br />
+          <%= p.text_field :name %>
+        </div>
+      <% end %>
+
+      <div><%= f.submit "Sign up", class: "button round" %></div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
+  </div>
 </div>
