--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -21,6 +21,7 @@
 
 <div id="myModal" class="reveal-modal large text-center">
   <h2>You just ate <span id='food-name'>FOOD_NAME</span></h2>
+  <p>FOOD_NAME is [[healthy]]</p>
   <p>[[+ x Coins]]</p>
   <p>[[Pet]] is feeling [[flavortext]]</p>
   <a class="close-reveal-modal">&#215;</a>
