--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,11 @@
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
+      <div><%= f.label :name %><br />
+      <%= f.text_field :name, :autofocus => true %></div>
+
       <div><%= f.label :email %><br />
-      <%= f.email_field :email, :autofocus => true %></div>
+      <%= f.email_field :email %></div>
 
       <div><%= f.label :password %><br />
       <%= f.password_field :password %></div>
@@ -16,7 +19,7 @@
 
       <%= fields_for :people do |p| %>
         <div>
-          <%= p.label :name %><br />
+          <%= p.label :name, "Child's Name" %><br />
           <%= p.text_field :name %>
         </div>
       <% end %>
