--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,14 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Login", new_user_session_path %>
-    <% end %>
+    <div id="menu">
+      <% if user_signed_in? %>
+        <%= link_to "Dashboard", user_path(current_user) %> |
+        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Login", new_user_session_path %>
+      <% end %>
+    </div>
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
