--- a/app/assets/stylesheets/prototype.scss
+++ b/app/assets/stylesheets/prototype.scss
@@ -106,6 +106,8 @@ section[class*='screen'] {
 		text-align: center;
 	}
   }
+  
+
 
 }
 
@@ -119,9 +121,31 @@ section[class*='screen'] {
 		margin-bottom: 1.25em;
 	}
 }
+.pop-health, .pop-money {
+	padding: .75em 0;
+	img {
+		position: relative;
+	}
+}
+.pop-health {
+	border: .1em dashed $lightBlue;
+	padding-top: .25em;
+	img {
+		top: 10px;
+	}
+}
+.pop-money {
+	border: .1em dashed $lightGreen;
+	img {
+		top: 5px;
+	}
+}
 
 .draggable {
 	cursor: move;
 }
+
+
+
 
 .reveal-modal > :first-child { margin: 0 !important; }
