--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 			</div>
       <p>Welcome, <%= current_user.email %>!</p>
 
-			<button class="large button round">Start!</button>
+			<button class="large button round success">Start!</button>
 
 		</section>
 
