--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -12,7 +12,7 @@
 		  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
 		  <%= f.password_field :password_confirmation %></div>
 		
-		  <div><%= f.submit "Change my password", class: "button round" %></div>
+		  <div><%= f.submit "Change my password", class: "button round success" %></div>
 		<% end %>
 		
 		<%= render "devise/shared/links" %>
