--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,7 +8,7 @@
 		  <div><%= f.label :email %><br />
 		  <%= f.email_field :email, :autofocus => true %></div>
 		
-		  <div><%= f.submit "Send me reset password instructions", class: "button round" %></div>
+		  <div><%= f.submit "Send me reset password instructions", class: "button round success" %></div>
 		<% end %>
 		
 		<%= render "devise/shared/links" %>
