--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
         </div>
       <% end %>
 
-      <div><%= f.submit "Sign up", class: "button round" %></div>
+      <div><%= f.submit "Sign up", class: "button round success" %></div>
     <% end %>
 
     <%= render "devise/shared/links" %>
