--- a/app/views/children/journal.html.erb
+++ b/app/views/children/journal.html.erb
@@ -1,3 +1,19 @@
 <%= render @user %>
 
+<h2>What did <%= @child.name %> eat today?</h2>
 
+<div id="journal">
+  <% Meal.all.each do |meal| %>
+    <%= content_tag :div, class: "small-3 large-2 columns meal", data: { meal_id: meal.id, person_id: @child.id } do %>
+      <%= image_tag meal.image_url %>
+      <%= content_tag :span, meal.name.titleize %>
+      <% if @child.meals_people.find_by_id(meal.id).present? %>
+        [OK]
+      <% end %>
+    <% end %>
+  <% end %>
+
+  <% content_for :dom_ready do %>
+    new MealPerson($(".meal"));
+  <% end %>
+</div>
