--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,16 +17,25 @@
   </head>
 
   <body>
-    <div id="menu">
-      <% if user_signed_in? %>
-        <%= link_to "Dashboard", user_path(current_user) %> |
-        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-      <% else %>
-        <%= link_to "Login", new_user_session_path %>
-      <% end %>
+    <div class="row">
+      <div class="large-12 columns">
+        <div id="menu">
+          <% if user_signed_in? %>
+            <%= link_to "Dashboard", user_path(current_user) %> |
+            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          <% else %>
+            <%= link_to "Login", new_user_session_path %>
+          <% end %>
+        </div>
+      </div>
     </div>
 
-    <%= yield %>
+    <div class="row">
+      <div class="large-12 columns">
+        <%= yield %>
+      </div>
+    </div>
+
     <%= javascript_include_tag "application" %>
     <script>
       $(function() {
