--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <div class="row food">
-    <% Meal.all.each do |meal| %>
+    <% @pet.person.meals_people.all.each do |meal| %>
       <div class="small-3 large-2 columns">
         <%= image_tag meal.image_url, title: meal.name.titleize, class: ["draggable"], data: { meal_id: meal.id, pet_id: @pet.id, tooltip: "", :"tip-id" => meal.id } %>
       </div>
