optimize png and modal

--- a/app/assets/stylesheets/prototype.scss
+++ b/app/assets/stylesheets/prototype.scss
@@ -142,6 +142,10 @@ section[class*='screen'] {
 
 }
 
+#justFed {
+	margin-top: 12.5em !important;
+}
+
 .icon--character {
   width: 75%;
   margin: 0 auto;
