new scale and more optimization

--- a/app/assets/stylesheets/scale.css.sass
+++ b/app/assets/stylesheets/scale.css.sass
@@ -9,8 +9,11 @@
 
   #tick
     position: absolute
-    left: 14px
-    width: 4px
-    height: 26px
-    background: black
-
+    left: 14px    
+    width: 0 
+    height: 0
+    border-left: 8px solid transparent
+    border-right: 8px solid transparent
+    border-top: 8px solid #2f2f2f
+    font-size: 0
+    line-height: 0
