--- a/app/views/children/journal.html.erb
+++ b/app/views/children/journal.html.erb
@@ -7,8 +7,10 @@
     <%= content_tag :div, class: "small-3 large-2 columns meal", data: { meal_id: meal.id, person_id: @child.id } do %>
       <%= image_tag meal.image_url %>
       <%= content_tag :span, meal.name.titleize %>
-      <% if @child.meals_people.find_by_id(meal.id).present? %>
-        [OK]
+      <%= content_tag :span, id: "meal_#{meal.id}_person_#{@child.id}" do %>
+        <% if @child.meals_people.find_by_meal_id(meal.id).present? %>
+          [OK]
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
