--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -10,9 +10,17 @@
   </div>
 
   <div class="row food">
-    <% @pet.person.meals_people.all.each do |meal| %>
+    <% @pet.person.meals_people.all.each do |meals_person| %>
+      <% meal = meals_person.meal %>
       <div class="small-3 large-2 columns">
-        <%= image_tag meal.image_url, title: meal.name.titleize, class: ["draggable"], data: { meal_id: meal.id, pet_id: @pet.id, tooltip: "", :"tip-id" => meal.id } %>
+        <%= image_tag meal.image_url, title: meal.name.titleize, class: ["draggable"],
+          data: {
+            meals_person_id: meals_person.id,
+            pet_id: @pet.id,
+            tooltip: "",
+            :"tip-id" => meal.id
+          }
+        %>
       </div>
     <% end %>
     <div class="columns"></div>
